# bmstu_labs

online-store/: CMakeLists.txt  README.md
online-store/include/: Admin.h  Customer.h  DatabaseConnection.h  Manager.h  Order.h  OrderItem.h  Payment.h  PaymentStrategy.h  Product.h  User.h
online-store/sql/: data.sql  functions.sql  procedures.sql  tables.sql  triggers.sql
online-store/src/: Admin.cpp  Customer.cpp  DatabaseConnection.cpp  Manager.cpp  OrderItem.cpp  PaymentStrategy.cpp  main.cpp
ИНФ-РК-2/: db.sql  main.cpp
ИНФ/ИНФ-1/: ИНФ-1.cpp
ИНФ/ИНФ-2/: check-process.sh  countdown.sh  socket-client.sh  socket-server.sh  sum-numbers.sh  text-editor.sh
ИНФ/ИНФ-3/: db.sql
ИНФ/ИНФ-4/: database.h  log.txt  logger.h  main.cpp  order.h  order_item.h  product.h
ИНФ/ИНФ-ДЗ/: customers.csv  main.cpp  products.csv  sales.csv
ОАИП-ДЗ/: input.txt  power_log.txt  temperature_data.txt  text.txt  vibration_log.txt  Семинар-10.cpp  Семинар-2.cpp  Семинар-3-Геом.cpp  Семинар-3.cpp  Семинар-4.cpp  Семинар-5.cpp  Семинар-6-презентация.cpp  Семинар-6.cpp  Семинар-7.cpp  Семинар-8.cpp  Семинар-9.cpp
ОАИП/ОАИП-1/: ОАИП-1.cpp
ОАИП/ОАИП-2/: ОАИП-2.cpp
ОАИП/ОАИП-3/: ОАИП-3.cpp
ОАИП/ОАИП-РК/: main.cpp  vehicles.txt
